-- update - 2024.11.17

- chore: Auto-Restart game version checker now uses different file
- fix: Auto-Restart now initialize game version to file if not present
- remove: Unused source include in this version of the egg

-- update - 2024.11.16

- fix: The Steam token mask removed other matching patterns aswell from being visible
- fix: Removed maxplayers_override from startup as its deprecated

-- update - 2024.11.15

- feat: Added Auto-Restart feature to automatically restart the server if it has a newer version
- feat: The console now censures the Steam Token of the user for security reasons (sending logs, screenshots, etc.)
- upgrade: Changed MetaMod auto-updater to use GitHub aswell due to some users had issues calling alliedmods.net
- refactor: The full script has been refactored for easier maintanaibility
- chore: Changed some of the variable rules to use boolean
- chore: Changed some of the variables naming and descriptions for better understanding

-- update - 2024.10.02

- fix: Round backup cleaner removed some other files

-- update - 2024.08.20

- fix: Server shutdown was handled like Segmentation fault
- fix: Server shown crash state and no answer dialog instead of kicking users

-- update - 2024.07.28

- feat: Added console filter to block unwanted messages (import the egg again to have it)
- feat: Added preview mode for console filter to show what messages you block exactly (import the egg again to have it)
- chore: Fix some spelling and grammar mistakes

-- update - 2024.07.24

- fix: Junk cleaner was not working at all

-- update - 2024.07.01

- feat: Added Dev branch support with tag `dev` (import the egg again to have it)
- feat: Added proper names for the images (import the egg again to have it)
- fix: Removed redundant codes at logging and coloring sections
- fix: Removed debug message leftovers at metamod updater
- fix: Removed error upon server shutdown and added a good message instead
- fix: Re-phrased some messages for better understanding